# katze

./: LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml
katze/: __init__.py
katze/fake/: gateway.py  http.py
